<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock Exchange</string>
    <string name="title_activity_my_portfolio">My Portfolio</string>
    <string name="title_activity_stock_exchange">Stock Exchange</string>
    <string name="title_activity_stock_management">Stock Management</string>
    <string name="title_activity_manage_stock">Add stock (%1$s)</string>
    <string name="title_activity_manage_stock_update">Update stock (%1$s)</string>
    <string name="title_activity_stock_details">Stock Details</string>
    <string name="title_activity_exchange_rates">Exchange Rates</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About Us</string>

    <string name="action_settings">Settings</string>
    <string name="action_buyStocks">Buy stocks</string>

    <string name="main_myPortfolio">My portfolio</string>
    <string name="main_stockExchange">Stock exchange</string>
    <string name="main_stockMgmt">Stock management</string>
    <string name="main_brokerMgmt">Broker management</string>

    <string name="se_markets">Select market:</string>
    <string name="se_stocks">Available stocks:</string>

    <string name="sd_name" translatable="false">Name</string>
    <string name="sd_symbol" translatable="false">Symbol</string>
    <string name="sd_sector">Sector</string>
    <string name="sd_value">Value</string>
    <string name="sd_title_buy">Buy %1$s stocks</string>
    <string name="sd_select_nbr">Select number of stocks:</string>
    <string name="sd_select_broker">Select broker:</string>
    <string name="sd_button_buy">Buy</string>

    <string name="sm_add_stock">Add stock </string>
    <string name="sm_update_stock">Update stock</string>
    <string name="ms_stock_symbol">Symbol</string>
    <string name="ms_stock_sector">Sector</string>
    <string name="ms_stock_btn_add">Add stock</string>

    <string name="toast_stockCreated">Stock successfully created!</string>
    <string name="toast_stockUpdated">Stock successfully updated!</string>
    <string name="toast_stockDeleted">Stock successfully deleted!</string>
    <string name="toast_stockBought">Stock successfully bought!</string>
    <string name="toast_stockSold">Stock successfully sold!</string>
    <string name="toast_fieldsEmpty">All text fields must contain a value in order to continue.</string>
    <string name="toast_updateSucessfull">Currency exchange rates are now up-to-date!</string>
    <string name="toast_noNetwork">Please activate your network in order to get the most recent currency exchange rates!</string>
    <string name="toast_currency_change">Currency changed to: %1$s</string>
    <string name="toast_language_change">Language changed to: %1$s</string>
    <string name="toast_brokerCreated">Broker successfully created!</string>
    <string name="toast_brokerDeleted">Broker successfully deleted!</string>
    <string name="toast_brokerUpdated">Broker successfully updated!</string>


    <string name="sm_dialog_chooseAction">Choose an action:</string>
    <string-array name="sm_dialog_choices">
        <item>Edit</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="mp_dialog_choices">
        <item>Sell</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="array_markets">
        <item>All</item>
        <item>Swiss market</item>
        <item>German market</item>
    </string-array>

    <string-array name="sm_array_markets">
        <item>Swiss market</item>
        <item>German market</item>
    </string-array>

    <string-array name="array_languages">
        <item>German</item>
        <item>English</item>
    </string-array>

    <string-array name="values_languages">
        <item>DE</item>
        <item>EN</item>
    </string-array>

    <string-array name="array_currency">
        <item>Swiss Francs</item>
        <item>U.S. Dollar</item>
        <item>Euro</item>
    </string-array>

    <string-array name="values_currency">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="tr_from">From</string>
    <string name="tr_to">To</string>
    <string name="tr_rate">Exchange rate</string>
    <string name="tr_date">Date / Time</string>

    <string name="sd_graph">Chart</string>
    <string name="settings_title">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_lang_title">Language Settings</string>
    <string name="settings_lang_summary">Selects the preferred language for the app</string>
    <string name="settings_lang_dialog">Select language:</string>
    <string name="settings_curr_title">Currency Settings</string>
    <string name="settings_curr_summary">Select the preferred currency for the stock prices</string>
    <string name="settings_curr_dialog">Select currency:</string>
    <string name="settings_exch_rates">Show exchange rates</string>

    <string name="about_text">This application has been developed in the module 644-1 choice of school 2 in the degree programme of business informatics on the  HES-SO Valais//Wallis  by two students Pierre-Alain Wyssen and Stefan Eggenschwiler.</string>
    <string name="about_logo_desc">Logo of HES-SO Valais//Wallis</string>
    <string name="mp_sell_dialog_title">Sell: %1$s</string>
    <string name="mp_sell_dialog_sell_btn">Sell</string>
    <string name="mp_sell_dialog_cancel_btn">Cancel</string>
    <string name="mp_summary_btn">Show Total</string>
    <string name="mp_summary_dialog_back_btn">Back</string>
    <string name="mp_summary_dialog_text">Portfolio Total: %1$s</string>
    <string name="title_activity_broker_management">Broker Management</string>
    <string name="se_broker">Available brokers:</string>

    <string name="title_activity_manage_broker">Add broker</string>
    <string name="title_activity_manage_broker_update">Update broker</string>
    <string name="mb_broker_btn_add">Add broker</string>
    <string name="mb_broker_name" translatable="false">Name</string>
    <string name="mb_broker_bankType">Bank type</string>
    <string name="mb_broker_securitiesDealerType">Securities dealer type</string>


</resources>
