<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_myPortfolio"
        android:id="@+id/btn_myPortfolio"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#96ffffff"
        android:width="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_stockExchange"
        android:id="@+id/btn_stockExchange"
        android:layout_below="@+id/btn_myPortfolio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#96ffffff"
        android:width="200dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_stockMgmt"
        android:id="@+id/btn_stockMgmt"
        android:layout_marginTop="44dp"
        android:background="#96ffffff"
        android:width="200dp"
        android:layout_below="@+id/btn_stockExchange"
        android:layout_alignRight="@+id/btn_stockExchange"
        android:layout_alignEnd="@+id/btn_stockExchange" />
</RelativeLayout>
