<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ch.hevs.stockexchange.ManageBrokerActivity">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:hint="@string/mb_broker_name"
            android:inputType="textCapWords"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextBankType"
            android:hint="@string/mb_broker_bankType"
            android:inputType="textCapSentences"
            android:layout_below="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSecuritiesDealerType"
            android:hint="@string/mb_broker_securitiesDealerType"
            android:inputType="textCapSentences"
            android:layout_below="@+id/editTextBankType"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mb_broker_btn_add"
            android:id="@+id/btn_addBroker"
            android:layout_below="@+id/editTextSecuritiesDealerType"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:background="#96ffffff"
            android:width="200dp"/>


    </RelativeLayout>
</ScrollView>